IREER-157 added use case test