@@ -8,18 +8,19 @@ import it.gov.pagopa.admissibility.dto.onboarding.OnboardingRejectionReason;
 import it.gov.pagopa.admissibility.mapper.Onboarding2EvaluationMapper;
 import it.gov.pagopa.admissibility.service.onboarding.*;
 import it.gov.pagopa.admissibility.utils.TestUtils;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.messaging.Message;
+import org.springframework.messaging.support.GenericMessage;
 import org.springframework.messaging.support.MessageBuilder;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @ExtendWith(MockitoExtension.class)
@@ -52,7 +53,7 @@ class AdmissibilityEvaluatorMediatorServiceImplTest {
                                     .setHeader(AzureHeaders.CHECKPOINTER, checkpointer);
                         }
                 )
-                .map(MessageBuilder::build).collect(Collectors.toList());
+                .map(MessageBuilder::build).toList();
 
         Flux<Message<String>> onboardingFlux = Flux.fromIterable(msgs);
 
@@ -77,6 +78,64 @@ class AdmissibilityEvaluatorMediatorServiceImplTest {
         Mockito.verify(onboardingNotifierServiceMock, Mockito.times(2)).notify(Mockito.any());
         Mockito.verify(authoritiesDataRetrieverServiceMock).retrieve(Mockito.any(), Mockito.any(), Mockito.any());
         Mockito.verify(onboardingRequestEvaluatorServiceMock).evaluate(Mockito.any(), Mockito.any());
+        checkpointers.forEach(c -> Mockito.verify(c).success());
+    }
+
+    @Test
+    void mediatorErrorSenderTest() {
+        // Given
+        OnboardingCheckService onboardingCheckServiceMock = Mockito.mock(OnboardingCheckServiceImpl.class);
+        AuthoritiesDataRetrieverService authoritiesDataRetrieverServiceMock = Mockito.mock(AuthoritiesDataRetrieverService.class);
+        OnboardingRequestEvaluatorService onboardingRequestEvaluatorServiceMock = Mockito.mock(OnboardingRequestEvaluatorService.class);
+        Onboarding2EvaluationMapper onboarding2EvaluationMapper = new Onboarding2EvaluationMapper();
+        ErrorNotifierService errorNotifierServiceMock = Mockito.mock(ErrorNotifierService.class);
+        OnboardingNotifierService onboardingNotifierServiceMock = Mockito.mock(OnboardingNotifierService.class);
+
+        AdmissibilityEvaluatorMediatorService admissibilityEvaluatorMediatorService = new AdmissibilityEvaluatorMediatorServiceImpl(onboardingCheckServiceMock, authoritiesDataRetrieverServiceMock, onboardingRequestEvaluatorServiceMock, onboarding2EvaluationMapper, errorNotifierServiceMock, TestUtils.objectMapper, onboardingNotifierServiceMock);
+
+        OnboardingDTO onboarding1 = OnboardingDTO.builder().userId("USER1").build();
+        OnboardingDTO onboarding2 = OnboardingDTO.builder().userId("USER2").build();
+
+        List<Checkpointer> checkpointers= new ArrayList<>(2);
+        List<Message<String>> msgs = Stream.of(onboarding1, onboarding2)
+                .map(TestUtils::jsonSerializer)
+                .map(s -> {
+                            Checkpointer checkpointer = Mockito.mock(Checkpointer.class);
+                            Mockito.when(checkpointer.success()).thenReturn(Mono.empty());
+                            checkpointers.add(checkpointer);
+                            return MessageBuilder.withPayload(s)
+                                    .setHeader(AzureHeaders.CHECKPOINTER, checkpointer);
+                        }
+                )
+                .map(MessageBuilder::build).toList();
+
+        Flux<Message<String>> onboardingFlux = Flux.fromIterable(msgs);
+
+        Mockito.when(onboardingCheckServiceMock.check(Mockito.eq(onboarding1), Mockito.any())).thenReturn(null);
+        Mockito.when(onboardingCheckServiceMock.check(Mockito.eq(onboarding2), Mockito.any())).thenReturn(null);
+
+        EvaluationDTO evaluationDTO1 = EvaluationDTO.builder().userId("USER1").build();
+        EvaluationDTO evaluationDTO2 = EvaluationDTO.builder().userId("USER2").build();
+
+        Mockito.when(authoritiesDataRetrieverServiceMock.retrieve(Mockito.eq(onboarding1), Mockito.any(), Mockito.eq(msgs.get(0)))).thenAnswer(i -> Mono.just(i.getArgument(0)));
+        Mockito.when(onboardingRequestEvaluatorServiceMock.evaluate(Mockito.eq(onboarding1), Mockito.any())).thenReturn(Mono.just(evaluationDTO1));
+
+        Mockito.when(authoritiesDataRetrieverServiceMock.retrieve(Mockito.eq(onboarding2), Mockito.any(), Mockito.eq(msgs.get(1)))).thenAnswer(i -> Mono.just(i.getArgument(0)));
+        Mockito.when(onboardingRequestEvaluatorServiceMock.evaluate(Mockito.eq(onboarding2), Mockito.any())).thenReturn(Mono.just(evaluationDTO2));
+
+        Mockito.when(onboardingNotifierServiceMock.notify(Mockito.same(evaluationDTO1))).thenReturn(false);
+        Mockito.when(onboardingNotifierServiceMock.notify(Mockito.same(evaluationDTO2))).thenThrow(new RuntimeException());
+
+        // When
+        admissibilityEvaluatorMediatorService.execute(onboardingFlux);
+
+        // Then
+        Mockito.verify(errorNotifierServiceMock, Mockito.times(2)).notifyAdmissibility(Mockito.any(GenericMessage.class), Mockito.anyString(), Mockito.anyBoolean(), Mockito.any());
+        Mockito.verify(errorNotifierServiceMock).notifyAdmissibility(Mockito.any(GenericMessage.class), Mockito.anyString(), Mockito.anyBoolean(), Mockito.any(IllegalStateException.class));
+        Mockito.verify(onboardingNotifierServiceMock, Mockito.times(2)).notify(Mockito.any());
+        Mockito.verify(authoritiesDataRetrieverServiceMock, Mockito.times(2)).retrieve(Mockito.any(), Mockito.any(), Mockito.any());
+        Mockito.verify(onboardingRequestEvaluatorServiceMock, Mockito.times(2)).evaluate(Mockito.any(), Mockito.any());
+        Assertions.assertEquals(2, checkpointers.size());
         checkpointers.forEach(c -> Mockito.verify(c).success());
     }
 }
